--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "jenssegers/mongodb": "^3.9",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "mongodb/mongodb": "^1.16"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
