--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.7",
+        "maatwebsite/excel": "^3.1",
         "mongodb/mongodb": "^1.16"
     },
     "require-dev": {
