--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.1",
-        "maatwebsite/excel": "^3.0.1",
+        "league/csv": "^9.16",
+        "maatwebsite/excel": "^3.1",
         "mongodb/mongodb": "^1.16"
     },
     "require-dev": {
